cabal-version:       2.4
name:                spiral
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Solomon Bothwell
maintainer:          ssbothwell@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

common deps
  default-extensions: GADTs
                    , KindSignatures
                    , DataKinds
                    , FlexibleInstances
                    , FlexibleContexts
                    , InstanceSigs
                    , ViewPatterns
                    , DeriveFunctor
                    , DeriveFoldable
                    , DeriveTraversable
                    , LambdaCase
  build-depends:      base >=4.12 && <=4.14
                    , containers
                    , comonad

library
  import: deps
  hs-source-dirs:      src
  ghc-options:      -ferror-spans -fshow-loaded-modules -Wall
  default-language:    Haskell2010
  exposed-modules:     Lib
                     , Lib.Stream
                     , Lib.Vector

executable spiral
  import: deps
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  -- hs-source-dirs:
  default-language:    Haskell2010
  build-depends:       spiral

